src/styles/_global.scss
* {
  &::-webkit-scrollbar {
    @apply w-2.5;
  }

  &::-webkit-scrollbar-track {
    @apply rounded-md border border-solid bg-transparent;
  }

  &::-webkit-scrollbar-thumb {
    @apply rounded-md;
  }
}

body {
  min-height: 100vh;
  min-height: -webkit-fill-available;
}

html {
  font-family: 'Archivo', sans-serif;
  background: var(--body);
  color: var(--text);
  font-size: 16px;
  line-height: 1.5;
  height: -webkit-fill-available;

  &.no-transition * {
    transition: none !important;
  }

  &.no-scroll {
    overflow: hidden;
  }

  // better fit for a big screens
  @media screen and (min-width: 2560px) {
    &[data-ratio='1'] {
      zoom: 1.25;
    }
  }
}

html,
body {
  &::-webkit-scrollbar {
    width: 0;
  }
}

img {
  display: block;
  width: 100%;
  height: auto;
  object-fit: cover;
}

svg:focus,
svg *:focus {
  outline: none !important;
}

// iOS fix
input[type='search'] {
  -webkit-appearance: none;
}

textarea {
  resize: none;
  white-space: unset !important;
}

label {
  cursor: pointer;
}

